--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -222,12 +222,19 @@ android {
         }
     }
     signingConfigs {
-        debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
-        }
+        // debug {
+        //     storeFile file('debug.keystore')
+        //     storePassword 'android'
+        //     keyAlias 'androiddebugkey'
+        //     keyPassword 'android'
+        // }
+        
+            release {
+                storeFile file('my-upload-key.keystore')
+                storePassword '123456'
+                keyAlias 'my-key-alias'
+                keyPassword '123456'
+            }
     }
     buildTypes {
         debug {
@@ -317,3 +324,4 @@ def isNewArchitectureEnabled() {
     // - Set an environment variable `ORG_GRADLE_PROJECT_newArchEnabled=true`
     return project.hasProperty("newArchEnabled") && project.newArchEnabled == "true"
 }
+
