--- a/ios/Podfile
+++ b/ios/Podfile
@@ -21,6 +21,8 @@ target 'instaclone' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-async-storage/async-storage'
+
   target 'instacloneTests' do
     inherit! :complete
     # Pods for testing
